QuickFind and Union

--- a/JavaAlgorithmsToCSharp/JavaAlgorithmsToCSharp.csproj
+++ b/JavaAlgorithmsToCSharp/JavaAlgorithmsToCSharp.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Week1\Week1.csproj" />
+  </ItemGroup>
+
 </Project>
